[SC-7663] - Avoid public pages scrolling on smaller screens for CFOMembers layout

--- a/src/account/layouts/cfo-member/cfo-member-layout.component.less
+++ b/src/account/layouts/cfo-member/cfo-member-layout.component.less
@@ -3,10 +3,14 @@ Login page
 ***/
 /* bg color */
 
+:host {
+    height: 100%;
+}
+
 .login {
     display: flex;
+    height: 100%;
     flex-direction: column;
-    height: 100vh;
 }
 div.header,
 div.footer {
